change spec
